#9 Updated NSAmointClassEntity, NSApproveRejectStatus, NSArea + deleted rouge class NSAreaList

--- a/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
@@ -54,13 +54,14 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountClassId()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountClassId()
   type: Method
-  summary: "\nPrimary key<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSAmountClassEntity thing;\nInteger amountClassId  = thing.GetAmountClassId();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAmountClassId()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: Primary key
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger amountClassId  = thing.GetAmountClassId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetAmountFrom()
@@ -73,13 +74,14 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountFrom()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountFrom()
   type: Method
-  summary: "\nLower limit of this amount class<p></p>\n<strong>Returns:</strong>Float<p></p>\n<pre><code>NSAmountClassEntity thing;\nFloat amountFrom  = thing.GetAmountFrom();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Float GetAmountFrom()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Float
+      description: Lower limit of this amount class
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nFloat amountFrom  = thing.GetAmountFrom();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetAmountTo()
@@ -92,13 +94,14 @@ items:
   nameWithType: NSAmountClassEntity.GetAmountTo()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetAmountTo()
   type: Method
-  summary: "\nUpper limit of this amount class<p></p>\n<strong>Returns:</strong>Float<p></p>\n<pre><code>NSAmountClassEntity thing;\nFloat amountTo  = thing.GetAmountTo();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Float GetAmountTo()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Float
+      description: Upper limit of this amount class
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nFloat amountTo  = thing.GetAmountTo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetCurrencyId()
@@ -111,13 +114,14 @@ items:
   nameWithType: NSAmountClassEntity.GetCurrencyId()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetCurrencyId()
   type: Method
-  summary: "\nCurrency the limits in this amount class refer to. Mixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSAmountClassEntity thing;\nInteger currencyId  = thing.GetCurrencyId();</code></pre>\n"
-  remarks: 
+  summary: ""
+  remarks: "\nMixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.\n"
   syntax: 
     content: Integer GetCurrencyId()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: Currency the limits in this amount class refer to.
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger currencyId  = thing.GetCurrencyId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetDeleted()
@@ -130,13 +134,14 @@ items:
   nameWithType: NSAmountClassEntity.GetDeleted()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetDeleted()
   type: Method
-  summary: "\n0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSAmountClassEntity thing;\nBool deleted  = thing.GetDeleted();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetDeleted()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: 0 - record is active; 1 - record is deleted and should not be shown in lists
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nBool deleted  = thing.GetDeleted();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetName()
@@ -149,13 +154,14 @@ items:
   nameWithType: NSAmountClassEntity.GetName()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetName()
   type: Method
-  summary: "\nThe list item<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAmountClassEntity thing;\nString name  = thing.GetName();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.String
+      description: The list item
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nString name  = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetRank()
@@ -168,13 +174,14 @@ items:
   nameWithType: NSAmountClassEntity.GetRank()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetRank()
   type: Method
-  summary: "\nRank order<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSAmountClassEntity thing;\nInteger rank  = thing.GetRank();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: Rank order
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger rank  = thing.GetRank();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.GetTooltip()
@@ -187,13 +194,14 @@ items:
   nameWithType: NSAmountClassEntity.GetTooltip()
   fullName: CRMScript.NetServer.NSAmountClassEntity.GetTooltip()
   type: Method
-  summary: "\nTooltip or other description<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAmountClassEntity thing;\nString tooltip  = thing.GetTooltip();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTooltip()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.String
+      description: Tooltip or other description
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nString tooltip  = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountClassId(Integer)
@@ -206,14 +214,16 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountClassId(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountClassId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAmountClassId(Integer amountClassId)
+    content: Void SetAmountClassId(Integer amountClassId)
     parameters:
     - id: amountClassId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger amountClassId;\nthing.SetAmountClassId(amountClassId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
@@ -226,11 +236,16 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountFrom()
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
   type: Method
-  summary: "\nLower limit of this amount class\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAmountFrom(Float amountFrom)
+    content: Void SetAmountFrom(Float amountFrom)
     parameters:
+    - id: amountFrom
+      type: CRMScript.Global.Float
+      description: Lower limit of this amount class
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nFloat amountFrom;\nthing.SetAmountFrom(amountFrom);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
@@ -243,11 +258,16 @@ items:
   nameWithType: NSAmountClassEntity.SetAmountTo()
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
   type: Method
-  summary: "\nUpper limit of this amount class\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAmountTo(Float amountTo)
+    content: Void SetAmountTo(Float amountTo)
     parameters:
+    - id: amountTo
+      type: CRMScript.Global.Float
+      description: Upper limit of this amount class
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nFloat amountTo;\nthing.SetAmountTo(amountTo);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetCurrencyId(Integer)
@@ -260,14 +280,16 @@ items:
   nameWithType: NSAmountClassEntity.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetCurrencyId(Integer)
   type: Method
-  summary: "\nCurrency the limits in this amount class refer to. Mixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nMixing currencies between classes can give rise to overlapping intervals and thus unpredictable classifications.\n"
   syntax: 
-    content: SetCurrencyId(Integer currencyId)
+    content: Void SetCurrencyId(Integer currencyId)
     parameters:
     - id: currencyId
       type: CRMScript.Global.Integer
-      description: 
+      description: Currency the limits in this amount class refer to.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger currencyId;\nthing.SetCurrencyId(currencyId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetDeleted(Bool)
@@ -280,14 +302,16 @@ items:
   nameWithType: NSAmountClassEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetDeleted(Bool)
   type: Method
-  summary: "\n0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDeleted(Bool deleted)
+    content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: 0 - record is active; 1 - record is deleted and should not be shown in lists
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nBool deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetName(String)
@@ -300,14 +324,16 @@ items:
   nameWithType: NSAmountClassEntity.SetName(String)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetName(String)
   type: Method
-  summary: "\nThe list item\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The list item
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetRank(Integer)
@@ -320,14 +346,16 @@ items:
   nameWithType: NSAmountClassEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetRank(Integer rank)
+    content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger rank;\nthing.SetRank(rank);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAmountClassEntity.SetTooltip(String)
@@ -340,14 +368,16 @@ items:
   nameWithType: NSAmountClassEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSAmountClassEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetTooltip(String tooltip)
+    content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nString tooltip;\nthing.SetTooltip(tooltip);</code></pre>\n"
 references:
@@ -381,3 +411,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
