--- a/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
@@ -3,13 +3,12 @@ items:
 - uid: CRMScript.NetServer.NSApproveRejectResponse
   commentId: T:CRMScript.NetServer.NSApproveRejectResponse
   id: NSApproveRejectResponse
-  so.intellisense: Void.NSApproveRejectResponse
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSApproveRejectResponse.#ctor
   - CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
   - CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
-  - CRMScript.NetServer.NSApproveRejectResponse.#ctor
   - CRMScript.NetServer.NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   - CRMScript.NetServer.NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
   name: NSApproveRejectResponse
@@ -18,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
-  commentId: M:CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
-  id: 'GetCreatedAppointmentId()'
-  so.intellisense: NSApproveRejectResponse.GetCreatedAppointmentId
-  langs:
-  - crmscript
-  name: 'GetCreatedAppointmentId()'
-  nameWithType: NSApproveRejectResponse.GetCreatedAppointmentId()
-  fullName: CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
-  type: Method
-  summary: "\nId of the created follow up.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSApproveRejectResponse thing;\nInteger createdAppointmentId  = thing.GetCreatedAppointmentId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetCreatedAppointmentId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSApproveRejectResponse thing;\nInteger createdAppointmentId  = thing.GetCreatedAppointmentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
-  commentId: M:CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
-  id: 'GetPluginResponse()'
-  so.intellisense: NSApproveRejectResponse.GetPluginResponse
-  langs:
-  - crmscript
-  name: 'GetPluginResponse()'
-  nameWithType: NSApproveRejectResponse.GetPluginResponse()
-  fullName: CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
-  type: Method
-  summary: "\nThe response from the operation.<p></p>\n<strong>Returns:</strong>NSPluginResponse<p></p>\n<pre><code>NSApproveRejectResponse thing;\nNSPluginResponse pluginResponse  = thing.GetPluginResponse();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSPluginResponse GetPluginResponse()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSPluginResponse
-  example: 
-  - "\n<pre><code>NSApproveRejectResponse thing;\nNSPluginResponse pluginResponse  = thing.GetPluginResponse();</code></pre>\n"
 - uid: CRMScript.NetServer.NSApproveRejectResponse.#ctor
   commentId: M:CRMScript.NetServer.NSApproveRejectResponse.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSApproveRejectResponse
   example: 
+- uid: CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
+  commentId: M:CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
+  id: 'GetCreatedAppointmentId()'
+  so.intellisense: NSApproveRejectResponse.GetCreatedAppointmentId
+  langs:
+  - crmscript
+  name: 'GetCreatedAppointmentId()'
+  nameWithType: NSApproveRejectResponse.GetCreatedAppointmentId()
+  fullName: CRMScript.NetServer.NSApproveRejectResponse.GetCreatedAppointmentId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetCreatedAppointmentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the created follow up.
+  example: 
+  - "\n<pre><code>NSApproveRejectResponse thing;\nInteger createdAppointmentId  = thing.GetCreatedAppointmentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
+  commentId: M:CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
+  id: 'GetPluginResponse()'
+  so.intellisense: NSApproveRejectResponse.GetPluginResponse
+  langs:
+  - crmscript
+  name: 'GetPluginResponse()'
+  nameWithType: NSApproveRejectResponse.GetPluginResponse()
+  fullName: CRMScript.NetServer.NSApproveRejectResponse.GetPluginResponse()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSPluginResponse GetPluginResponse()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSPluginResponse
+      description: The response from the operation.
+  example: 
+  - "\n<pre><code>NSApproveRejectResponse thing;\nNSPluginResponse pluginResponse  = thing.GetPluginResponse();</code></pre>\n"
 - uid: CRMScript.NetServer.NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   commentId: M:CRMScript.NetServer.NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   id: 'SetCreatedAppointmentId(Integer)'
@@ -81,14 +82,16 @@ items:
   nameWithType: NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   fullName: CRMScript.NetServer.NSApproveRejectResponse.SetCreatedAppointmentId(Integer)
   type: Method
-  summary: "\nId of the created follow up.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCreatedAppointmentId(Integer createdAppointmentId)
+    content: Void SetCreatedAppointmentId(Integer createdAppointmentId)
     parameters:
     - id: createdAppointmentId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the created follow up.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSApproveRejectResponse thing;\nInteger createdAppointmentId;\nthing.SetCreatedAppointmentId(createdAppointmentId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
@@ -101,14 +104,16 @@ items:
   nameWithType: NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
   fullName: CRMScript.NetServer.NSApproveRejectResponse.SetPluginResponse(NSPluginResponse)
   type: Method
-  summary: "\nThe response from the operation.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetPluginResponse(NSPluginResponse pluginResponse)
+    content: Void SetPluginResponse(NSPluginResponse pluginResponse)
     parameters:
     - id: pluginResponse
       type: CRMScript.NetServer.NSPluginResponse
-      description: 
+      description: The response from the operation.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSApproveRejectResponse thing;\nNSPluginResponse pluginResponse;\nthing.SetPluginResponse(pluginResponse);</code></pre>\n"
 references:
@@ -130,3 +135,9 @@ references:
   name: NSPluginResponse
   nameWithType: NSPluginResponse
   fullName: CRMScript.NetServer.NSPluginResponse
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
