--- a/docs/api-reference/CRMScript.NetServer.NSArea.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArea.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.NetServer.NSArea
   commentId: T:CRMScript.NetServer.NSArea
   id: NSArea
-  so.intellisense: Void.NSArea
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArea.#ctor
   - CRMScript.NetServer.NSArea.GetAreaId()
   - CRMScript.NetServer.NSArea.GetFreetextEnabeled()
   - CRMScript.NetServer.NSArea.GetMaxDataAge()
   - CRMScript.NetServer.NSArea.GetName()
   - CRMScript.NetServer.NSArea.GetNumberOfLogins()
   - CRMScript.NetServer.NSArea.GetNumberOfUsers()
-  - CRMScript.NetServer.NSArea.#ctor
   - CRMScript.NetServer.NSArea.SetAreaId(Integer)
   - CRMScript.NetServer.NSArea.SetFreetextEnabeled(Bool)
   - CRMScript.NetServer.NSArea.SetMaxDataAge(Integer)
@@ -26,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArea.GetAreaId()
-  commentId: M:CRMScript.NetServer.NSArea.GetAreaId()
-  id: 'GetAreaId()'
-  so.intellisense: NSArea.GetAreaId
-  langs:
-  - crmscript
-  name: 'GetAreaId()'
-  nameWithType: NSArea.GetAreaId()
-  fullName: CRMScript.NetServer.NSArea.GetAreaId()
-  type: Method
-  summary: "\nPrimary key<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArea thing;\nInteger areaId  = thing.GetAreaId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAreaId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArea thing;\nInteger areaId  = thing.GetAreaId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArea.GetFreetextEnabeled()
-  commentId: M:CRMScript.NetServer.NSArea.GetFreetextEnabeled()
-  id: 'GetFreetextEnabeled()'
-  so.intellisense: NSArea.GetFreetextEnabeled
-  langs:
-  - crmscript
-  name: 'GetFreetextEnabeled()'
-  nameWithType: NSArea.GetFreetextEnabeled()
-  fullName: CRMScript.NetServer.NSArea.GetFreetextEnabeled()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSArea thing;\nBool freetextEnabeled  = thing.GetFreetextEnabeled();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetFreetextEnabeled()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSArea thing;\nBool freetextEnabeled  = thing.GetFreetextEnabeled();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArea.GetMaxDataAge()
-  commentId: M:CRMScript.NetServer.NSArea.GetMaxDataAge()
-  id: 'GetMaxDataAge()'
-  so.intellisense: NSArea.GetMaxDataAge
-  langs:
-  - crmscript
-  name: 'GetMaxDataAge()'
-  nameWithType: NSArea.GetMaxDataAge()
-  fullName: CRMScript.NetServer.NSArea.GetMaxDataAge()
-  type: Method
-  summary: "\nMax age of data when generating db's based on this area<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArea thing;\nInteger maxDataAge  = thing.GetMaxDataAge();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetMaxDataAge()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArea thing;\nInteger maxDataAge  = thing.GetMaxDataAge();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArea.GetName()
-  commentId: M:CRMScript.NetServer.NSArea.GetName()
-  id: 'GetName()'
-  so.intellisense: NSArea.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSArea.GetName()
-  fullName: CRMScript.NetServer.NSArea.GetName()
-  type: Method
-  summary: "\nArea name<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArea thing;\nString name  = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArea thing;\nString name  = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArea.GetNumberOfLogins()
-  commentId: M:CRMScript.NetServer.NSArea.GetNumberOfLogins()
-  id: 'GetNumberOfLogins()'
-  so.intellisense: NSArea.GetNumberOfLogins
-  langs:
-  - crmscript
-  name: 'GetNumberOfLogins()'
-  nameWithType: NSArea.GetNumberOfLogins()
-  fullName: CRMScript.NetServer.NSArea.GetNumberOfLogins()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArea thing;\nInteger numberOfLogins  = thing.GetNumberOfLogins();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetNumberOfLogins()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArea thing;\nInteger numberOfLogins  = thing.GetNumberOfLogins();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArea.GetNumberOfUsers()
-  commentId: M:CRMScript.NetServer.NSArea.GetNumberOfUsers()
-  id: 'GetNumberOfUsers()'
-  so.intellisense: NSArea.GetNumberOfUsers
-  langs:
-  - crmscript
-  name: 'GetNumberOfUsers()'
-  nameWithType: NSArea.GetNumberOfUsers()
-  fullName: CRMScript.NetServer.NSArea.GetNumberOfUsers()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArea thing;\nInteger numberOfUsers  = thing.GetNumberOfUsers();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetNumberOfUsers()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArea thing;\nInteger numberOfUsers  = thing.GetNumberOfUsers();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.#ctor
   commentId: M:CRMScript.NetServer.NSArea.#ctor
   id: '#ctor'
@@ -155,6 +40,126 @@ items:
   syntax: 
     content: NSArea
   example: 
+- uid: CRMScript.NetServer.NSArea.GetAreaId()
+  commentId: M:CRMScript.NetServer.NSArea.GetAreaId()
+  id: 'GetAreaId()'
+  so.intellisense: NSArea.GetAreaId
+  langs:
+  - crmscript
+  name: 'GetAreaId()'
+  nameWithType: NSArea.GetAreaId()
+  fullName: CRMScript.NetServer.NSArea.GetAreaId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetAreaId()
+    parameters:
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSArea thing;\nInteger areaId  = thing.GetAreaId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArea.GetFreetextEnabeled()
+  commentId: M:CRMScript.NetServer.NSArea.GetFreetextEnabeled()
+  id: 'GetFreetextEnabeled()'
+  so.intellisense: NSArea.GetFreetextEnabeled
+  langs:
+  - crmscript
+  name: 'GetFreetextEnabeled()'
+  nameWithType: NSArea.GetFreetextEnabeled()
+  fullName: CRMScript.NetServer.NSArea.GetFreetextEnabeled()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetFreetextEnabeled()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description:
+  example: 
+  - "\n<pre><code>NSArea thing;\nBool freetextEnabeled  = thing.GetFreetextEnabeled();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArea.GetMaxDataAge()
+  commentId: M:CRMScript.NetServer.NSArea.GetMaxDataAge()
+  id: 'GetMaxDataAge()'
+  so.intellisense: NSArea.GetMaxDataAge
+  langs:
+  - crmscript
+  name: 'GetMaxDataAge()'
+  nameWithType: NSArea.GetMaxDataAge()
+  fullName: CRMScript.NetServer.NSArea.GetMaxDataAge()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetMaxDataAge()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Max age of data when generating databases based on this area.
+  example: 
+  - "\n<pre><code>NSArea thing;\nInteger maxDataAge  = thing.GetMaxDataAge();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArea.GetName()
+  commentId: M:CRMScript.NetServer.NSArea.GetName()
+  id: 'GetName()'
+  so.intellisense: NSArea.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSArea.GetName()
+  fullName: CRMScript.NetServer.NSArea.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Area name
+  example: 
+  - "\n<pre><code>NSArea thing;\nString name  = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArea.GetNumberOfLogins()
+  commentId: M:CRMScript.NetServer.NSArea.GetNumberOfLogins()
+  id: 'GetNumberOfLogins()'
+  so.intellisense: NSArea.GetNumberOfLogins
+  langs:
+  - crmscript
+  name: 'GetNumberOfLogins()'
+  nameWithType: NSArea.GetNumberOfLogins()
+  fullName: CRMScript.NetServer.NSArea.GetNumberOfLogins()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetNumberOfLogins()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+  - "\n<pre><code>NSArea thing;\nInteger numberOfLogins  = thing.GetNumberOfLogins();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArea.GetNumberOfUsers()
+  commentId: M:CRMScript.NetServer.NSArea.GetNumberOfUsers()
+  id: 'GetNumberOfUsers()'
+  so.intellisense: NSArea.GetNumberOfUsers
+  langs:
+  - crmscript
+  name: 'GetNumberOfUsers()'
+  nameWithType: NSArea.GetNumberOfUsers()
+  fullName: CRMScript.NetServer.NSArea.GetNumberOfUsers()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetNumberOfUsers()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+  - "\n<pre><code>NSArea thing;\nInteger numberOfUsers  = thing.GetNumberOfUsers();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetAreaId(Integer)
   commentId: M:CRMScript.NetServer.NSArea.SetAreaId(Integer)
   id: 'SetAreaId(Integer)'
@@ -165,14 +170,16 @@ items:
   nameWithType: NSArea.SetAreaId(Integer)
   fullName: CRMScript.NetServer.NSArea.SetAreaId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAreaId(Integer areaId)
+    content: Void SetAreaId(Integer areaId)
     parameters:
     - id: areaId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nInteger areaId;\nthing.SetAreaId(areaId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetFreetextEnabeled(Bool)
@@ -188,11 +195,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetFreetextEnabeled(Bool freetextEnabeled)
+    content: Void SetFreetextEnabeled(Bool freetextEnabeled)
     parameters:
     - id: freetextEnabeled
       type: CRMScript.Global.Bool
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nBool freetextEnabeled;\nthing.SetFreetextEnabeled(freetextEnabeled);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetMaxDataAge(Integer)
@@ -205,14 +214,16 @@ items:
   nameWithType: NSArea.SetMaxDataAge(Integer)
   fullName: CRMScript.NetServer.NSArea.SetMaxDataAge(Integer)
   type: Method
-  summary: "\nMax age of data when generating db's based on this area\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetMaxDataAge(Integer maxDataAge)
+    content: Void SetMaxDataAge(Integer maxDataAge)
     parameters:
     - id: maxDataAge
       type: CRMScript.Global.Integer
-      description: 
+      description: Max age of data when generating databases based on this area
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nInteger maxDataAge;\nthing.SetMaxDataAge(maxDataAge);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetName(String)
@@ -225,14 +236,16 @@ items:
   nameWithType: NSArea.SetName(String)
   fullName: CRMScript.NetServer.NSArea.SetName(String)
   type: Method
-  summary: "\nArea name\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Area name
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetNumberOfLogins(Integer)
@@ -248,11 +261,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetNumberOfLogins(Integer numberOfLogins)
+    content: Void SetNumberOfLogins(Integer numberOfLogins)
     parameters:
     - id: numberOfLogins
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nInteger numberOfLogins;\nthing.SetNumberOfLogins(numberOfLogins);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArea.SetNumberOfUsers(Integer)
@@ -268,11 +283,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetNumberOfUsers(Integer numberOfUsers)
+    content: Void SetNumberOfUsers(Integer numberOfUsers)
     parameters:
     - id: numberOfUsers
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArea thing;\nInteger numberOfUsers;\nthing.SetNumberOfUsers(numberOfUsers);</code></pre>\n"
 references:
@@ -300,3 +317,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
